--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
-body {
-  background-color: #000;
-}
-
 
 main {
-background-color: white;
-color: black;
-margin: auto;
-width: 500px;
+    margin:auto;
+    padding:1m;
+    width:700px;
+    min-height:50vh;
+    background:black;
+
+}
+
+.container {
+
+display:grid;
+justify-content: center;
+align-items: center;
 text-align: center;
 
+}
 
+h1 {
+    color:white;
+    text-transform: uppercase;
 }
