--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,5 @@
 body {
-  background-color: #000;
-}
-
-
-main {
-background-color: white;
-color: black;
-margin: auto;
-width: 500px;
-text-align: center;
-
-
+    margin:0 auto;
+    width:600px;
+    text-align: center;
 }
