--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,18 @@ body {
 
 }
 
+
+
+
+
 .inputform {
 
- 
+
     margin: auto;
-    width: 100%;
+    width:75vw;
     text-align: center;
     color: white;
-    padding: 10px;
+   
     font-size: 1.5em;
    
 
@@ -22,17 +26,23 @@ body {
 input {
     width: 100%;
     border-radius: 8px;
+    text-align: center;
     
 }
 
+textarea{
+    margin-top:10px;
+   
+}
+
 button {
-    padding:7px;
+    padding:0px 15px;
     -webkit-appearance: none;
     background:white;
-    margin-top: 15px;
+    margin-top: 10px;
     border-radius: 10px;
     color: rgb(12, 88, 150);
-    transition:background 500ms ease-in-out;
+    transition:background 250ms ease-in-out;
 
 }
 
@@ -40,14 +50,15 @@ button:hover {
     background: rgb(12, 88, 150);
     color: white;
     
-    transition:background 500ms ease-in-out;
+    transition:background 250ms ease-in-out;
     
 }
 
 
 body{
-    height: 90vh;
+    height:100vh;
     display: flex;
+  
     align-items: center;
     justify-content: center;
     background-size: cover;
@@ -57,14 +68,19 @@ body{
 }
 
 #startButton{
+    overflow:hidden;
     width:50%;
     height: 20%;
     border:2px solid white;
     font-size: 2em;
+
+    
     
 }
 
-.hidden {
 
+.hidden {
+    
+    
     display:none;
 }
