--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,10 @@ body {
     flex-direction: column;
     text-align: center;
     background-size: cover;
-    background-image:url("https://images.unsplash.com/photo-1494376877685-d3d2559d4f82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80");
-    transition:2s font-size ease-in-out;
-    transition:2s background ease-in-out;
-    transition:3s all ease-in-out;
+    background-image:url("https://www.scoutmag.ph/wp-content/uploads/Bullet-2.gif");
+    transition:1.5s font-size ease-in-out;
+    transition:1.5s background ease-in-out;
+    transition:2s all ease-in-out;
    font-size: 1em;
 
     color:white;
@@ -18,7 +18,7 @@ body {
 .scarry{
 
     background-image:url("https://images.unsplash.com/photo-1484608577325-c7540cc6794d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2250&q=80");
-   
+    background-size: cover;
 }
 
 .freddy{
@@ -26,7 +26,7 @@ body {
 
     background-image:url("https://gamespot1.cbsistatic.com/uploads/scale_super/1578/15789737/3449152-freddy-dek.jpg");
     
-
+    background-size: cover;
 
    
 }
@@ -37,7 +37,7 @@ body {
 
 
     background-image:url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2YWw-O6o8AMVmY15aH3iLd2WDeuBMiPWhTINH2Pf81bSoaXyi");
-    
+    background-size: cover;
     
 }
 
@@ -46,11 +46,14 @@ body {
 
     background-image:url(" http://getwallpapers.com/wallpaper/full/7/4/a/18853.jpg");
     
-   
+    background-size: cover;
 }
 
 .normalbg{
     background-image:url("https://images.unsplash.com/photo-1437680041790-b7ed7b5a4950?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2100&q=80");
+
+
+    background-size: cover;
 
 }
 
@@ -58,20 +61,20 @@ body {
 
     background-image:url("https://pixelz.cc/wp-content/uploads/2017/08/kanye-west-uhd-4k-wallpaper.jpg");
 
-
+    background-size: cover;
 }
 
 .lilnas {
 
     background-image:url("https://miro.medium.com/max/2560/0*ri7FX4F5ELmvjkNu");
 
-
+    background-size: cover;
 }
 
 .pennywise{
 
     background-image:url("https://images7.alphacoders.com/868/thumb-1920-868807.jpg");
-    
+    background-size: cover;
     
 
 }
